--- a/src/pages/Admin/Admin.scss
+++ b/src/pages/Admin/Admin.scss
@@ -48,7 +48,7 @@
   }
 
   &__input {
-    width: 100%;
+    max-width: 100%;
     padding: map-get($spacings, 2) map-get($spacings, 3);
     background-color: var(--bg-surface);
     border: 1px solid var(--border-color);
